Truncate word list in topic card, fix progress column padding

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -205,8 +205,8 @@ div.error {
   content: ", ";
 }
 
-.fullStop :last-of-type:after {
-  content: ".";
+.ellipsis :last-of-type:after {
+  content: "...";
 }
 
 /* Pie chart */
